# b6b

./: .codecov.yml  .gitmodules  .travis.yml  COPYING  Dockerfile  README  README.md  ci_build.sh  codecov.yml  meson.build  meson_options.txt  mkdocs.yml  travis.yml
doc/: b6b.1  b6b.txt  bindings.md  core.md  index.md  license.md  meson.build  mkdocs.yml  streams.md  use_cases.md
docs/: code.css  dict.md  eval.md  evloop.md  exc.md  flow.md  fs.md  index.md  interp.md  introduction.md  linenoise.md  list.md  loop.md  meson.build  objects.md  proc.md  ssl.md  str.md  streams.md  thread.md  tutorial.md  zlib.md
examples/: httpd.b6b  install.sh  meson.build
include/: b6b.h  meson.build  miniz_export.h
include/b6b/: core.h  dict.h  ext.h  fdops.h  float.h  frame.h  hash.h  int.h  interp.h  list.h  num.h  obj.h  offload.h  proc.h  stdio.h  str.h  strm.h  syscall.h  thread.h
src/: b6b.c  b6b_co.c  b6b_core.c  b6b_dict.c  b6b_event.c  b6b_evloop.c  b6b_exc.c  b6b_fdops.c  b6b_ffi.c  b6b_file.c  b6b_float.c  b6b_frame.c  b6b_hash.c  b6b_int.c  b6b_interp.c  b6b_linenoise.c  b6b_list.c  b6b_logic.c  b6b_loop.c  b6b_math.c  b6b_num.c  b6b_obj.c  b6b_offload.c  b6b_path.c  b6b_poll.c  b6b_proc.c  b6b_rand.c  b6b_sem.c  b6b_sh.c  b6b_signal.c  b6b_socket.c  b6b_ssl.c  b6b_stdio.c  b6b_str.c  b6b_strm.c  b6b_syscall.c  b6b_thread.c  b6b_time.c  b6b_timer.c  b6b_zlib.c  (+3 more)
tests/: b6b_test_add.c  b6b_test_and.c  b6b_test_b6b.c  b6b_test_bit_and.c  b6b_test_bit_or.c  b6b_test_bit_xor.c  b6b_test_break.c  b6b_test_bswap.c  b6b_test_call.c  b6b_test_cast.c  b6b_test_choice.c  b6b_test_co.c  b6b_test_compress.c  b6b_test_continue.c  b6b_test_decode.c  b6b_test_decompress.c  b6b_test_deflate.c  b6b_test_dict.c  b6b_test_dict_get.c  b6b_test_dict_set.c  b6b_test_dict_unset.c  b6b_test_div.c  b6b_test_echo.c  b6b_test_eq.c  b6b_test_eval.c  b6b_test_evloop_after.c  b6b_test_exit.c  b6b_test_export.c  b6b_test_ffi.c  b6b_test_ffi_buf.c  b6b_test_ffi_call.c  b6b_test_ffi_dlopen.c  b6b_test_ffi_func.c  b6b_test_ffi_memcpy.c  b6b_test_ffi_pack.c  b6b_test_ffi_unpack.c  b6b_test_file.c  b6b_test_ge.c  b6b_test_global.c  b6b_test_gt.c  (+69 more)
tests/data/: exit.b6b  multi.b6b  shebang.b6b
