# This file is part of b6b.
#
# Copyright 2017 Dima Krasner
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

foreach md: ['dict.md', 'eval.md', 'evloop.md', 'exc.md', 'flow.md', 'fs.md', 'index.md', 'interp.md', 'linenoise.md', 'list.md', 'loop.md', 'objects.md', 'proc.md', 'str.md', 'streams.md', 'thread.md', 'tutorial.md', 'zlib.md']
	install_data(md, install_dir: docdir)
endforeach
